# metalcpp-testing

./: .gitignore  CMakeLists.txt  README.md
cmake/: Info.plist.in
shaders/: cube.metal  textured_square.metal
src/: AppDelegate.h  AppDelegate.mm  MetalView.h  MetalView.mm  VertexData.h  main.cpp  main.mm
